<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/take_out_radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <RadioButton
            android:id="@+id/eat_in_radio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/eat_in_radio_text"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/take_out_radio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/take_out_radio_text"
            android:layout_weight="1"/>
    </RadioGroup>

    <ListView
        android:id="@+id/create_order_item_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_order_btn"
        android:layout_below="@id/take_out_radio_group"
        android:dividerHeight="10dp"/>

    <Button
        android:id="@+id/add_order_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_order_btn_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>